# aosp-noto-fonts

./: .gitignore  Pipfile  README.md  build-android.sh  build-tar.sh  build.sh  check-diff.sh  install.sh  ls-fonts.py  ls.py  pyproject.toml
diff/: NotoSansCJK-Regular.ttc-0.C_F_F_.ttx.diff  NotoSansCJK-Regular.ttc-0._c_m_a_p.ttx.diff  NotoSansCJK-Regular.ttc-1._c_m_a_p.ttx.diff  NotoSansCJK-Regular.ttc-2._c_m_a_p.ttx.diff  NotoSansCJK-Regular.ttc-3._c_m_a_p.ttx.diff  NotoSansCJK-Regular.ttc-4._c_m_a_p.ttx.diff  NotoSansCJK-Regular.ttc-5._c_m_a_p.ttx.diff  NotoSansCJK-Regular.ttc-6._c_m_a_p.ttx.diff  NotoSansCJK-Regular.ttc-7._c_m_a_p.ttx.diff  NotoSansCJK-Regular.ttc-8._c_m_a_p.ttx.diff  NotoSansCJK-Regular.ttc-9._c_m_a_p.ttx.diff  NotoSansCJK-Regular.ttc.tables.diff  NotoSansCJK-VF.otf.ttc-0._c_m_a_p.ttx.diff  NotoSansCJK-VF.otf.ttc-1._c_m_a_p.ttx.diff  NotoSansCJK-VF.otf.ttc-2._c_m_a_p.ttx.diff  NotoSansCJK-VF.otf.ttc-3._c_m_a_p.ttx.diff  NotoSansCJK-VF.otf.ttc-4._c_m_a_p.ttx.diff  NotoSansCJK-VF.otf.ttc.tables.diff  NotoSerifCJK-Regular.ttc-0._c_m_a_p.ttx.diff  NotoSerifCJK-Regular.ttc-1._c_m_a_p.ttx.diff  NotoSerifCJK-Regular.ttc-2._c_m_a_p.ttx.diff  NotoSerifCJK-Regular.ttc-3._c_m_a_p.ttx.diff  NotoSerifCJK-Regular.ttc-4._c_m_a_p.ttx.diff  NotoSerifCJK-Regular.ttc.tables.diff  NotoSerifCJK-VF.otf.ttc-0._c_m_a_p.ttx.diff  NotoSerifCJK-VF.otf.ttc-1._c_m_a_p.ttx.diff  NotoSerifCJK-VF.otf.ttc-2._c_m_a_p.ttx.diff  NotoSerifCJK-VF.otf.ttc-3._c_m_a_p.ttx.diff  NotoSerifCJK-VF.otf.ttc-4._c_m_a_p.ttx.diff  NotoSerifCJK-VF.otf.ttc.tables.diff
