[tool.poetry]
name = "noto-workspace"
version = "0.1.0"
description = "Workspace for Noto fonts"
authors = ["Koji Ishii <kojii@chromium.org>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
